# SOLVERLAB

./: .gitignore  CMakeLists.txt  Doxyfile-user-guide.in  Doxyfile.in  README.md  README_solverlabGUI.md  ToDoSolverLab.txt  env_SOLVERLAB.sh  get_packagespy.sh
CDMATH/: .travis.yml  CMakeLists.txt  CPackLists.txt  Doxyfile.in  README.md  cdmath.spec  configure  env_CDMATH.sh  mainCDMATH.cxx
CDMATH/IJKmesh/: CMakeLists.txt
CDMATH/IJKmesh/inc/: IJKCell.hxx  IJKFace.hxx  IJKField.hxx  IJKMesh.hxx  IJKNode.hxx  IJKPoint.hxx
CDMATH/IJKmesh/src/: Cell.cxx  Face.cxx  Field.cxx  IJKMesh.cxx  Node.cxx  Point.cxx
CDMATH/base/: CMakeLists.txt
CDMATH/base/inc/: CMakeLists.txt  CdmathException.hxx  DoubleTab.hxx  GenericMatrix.hxx  Matrix.hxx  Vector.hxx
CDMATH/base/src/: CMakeLists.txt  CdmathException.cxx  DoubleTab.cxx  GenericMatrix.cxx  Matrix.cxx  Vector.cxx
CDMATH/debian/: cdmath.dsc  changelog  control  packaging.md  rules
CDMATH/debian/source/: include-binaries
CDMATH/linearsolver/: CMakeLists.txt
CDMATH/linearsolver/inc/: CMakeLists.txt  LinearSolver.hxx  SparseMatrixPetsc.hxx
CDMATH/linearsolver/src/: CMakeLists.txt  LinearSolver.cxx  SparseMatrixPetsc.cxx
CDMATH/mesh/: CMakeLists.txt
CDMATH/mesh/inc/: CMakeLists.txt  Cell.hxx  Face.hxx  Field.hxx  Mesh.hxx  Node.hxx  Point.hxx
CDMATH/mesh/src/: CMakeLists.txt  Cell.cxx  Face.cxx  Field.cxx  Mesh.cxx  Node.cxx
CDMATH/postprocessing/: CMakeLists.txt  MED_routines.py  PV_routines.py  VTK_routines.py  analyticalFunction_discretizer.py  resultsBase.py
CDMATH/pre_requis/PETSc/: CMakeLists.txt
CDMATH/swig/: CMakeLists.txt  cdmath_with_petsc.i  cdmath_without_petsc.i
CDMATH/tests/: CMakeLists.txt  MainTests.cxx
CDMATH/tests/cdmath/: CMakeLists.txt  CellTests.cxx  CellTests.hxx  FaceTests.cxx  FaceTests.hxx  FieldTests.cxx  FieldTests.hxx  LinearSolverTests.cxx  LinearSolverTests.hxx  MatrixTests.cxx  MatrixTests.hxx  MeshTests.cxx  MeshTests.hxx  NodeTests.cxx  NodeTests.hxx  PointTests.cxx  PointTests.hxx  SparseMatrixPetscTests.cxx  SparseMatrixPetscTests.hxx  VectorTests.cxx  VectorTests.hxx
CDMATH/tests/doc/: Notebooks.md
CDMATH/tests/examples/: CMakeLists.txt
CDMATH/tests/ressources/: BoysSurface.med  CMakeLists.txt  cubeWithLocRefCubes.med  diskWithHexagons.med  diskWithSpiderWeb.med  diskWithSquares.med  diskWithTriangles.med  meshHexagonWithTriangles.med  meshSphere.med  meshSquare.med  meshTorus.med  squareWithDeformedQuadrangles.med  squareWithLocRefSquares.med  squareWithSquares.med  squareWithTriangles.med
CDMATH/tests/swig/: CMakeLists.txt  linearSolverTests.py  mainTests.py  testFieldCreationAndSave.py  test_PV_routines.py  test_VTK_routines.py  test_analyticalFunction_discretizer.py
CDMATH/tests/validation/: CMakeLists.txt
CDMATH/tools/coverage/: coverage.py
CoreFlows/: CMakeLists.txt  CPackLists.txt  Doxyfile.in  README.md  configure  env_CoreFlows.sh  main.py  mainCoreFlows.cxx
CoreFlows/Documentation/: PhysicalModels.dox  PhysicalModels.md  biblio.dox  examples.dox  examples.md  functionalities.dox  functionalities.ipynb  functionalities.md  install.dox  install.md  intro-dev-guide.dox  intro-user-guide.dox  intro.dox  numericalPage.dox  numericalPage.ipynb  numericalPage.md  software.dox  software.md
CoreFlows/Documentation/Examples/: Example5EqPage.dox  ExampleDiffusEqPage.dox  ExampleDriftModelPage.dox  ExampleIsothermalPage.dox  ExampleSinglePhase.dox  ExampleSinglePhase.dox.backup  ExampleStationaryDiffusEqPage.dox  ExampleTransEqPage.dox
CoreFlows/Documentation/PhysicalModels/: DiffusionEq.dox  DiffusionEq.ipynb  DiffusionEq.md  NSModelsPage.dox  NSModelsPage.ipynb  NSModelsPage.md  ScalarModelsPage.dox  ScalarModelsPage.ipynb  ScalarModelsPage.md  StationaryDiffusionEq.dox  StationaryDiffusionEq.md  TransportEq.dox  TransportEq.ipynb  TransportEq.md  TwoPhasePage.dox  TwoPhasePage.ipynb  TwoPhasePage.md
CoreFlows/Models/: CMakeLists.txt
CoreFlows/Models/inc/: CMakeLists.txt  DiffusionEquation.hxx  DriftModel.hxx  EulerBarotropicStaggered.hxx  FiveEqsTwoFluid.hxx  Fluide.h  IAPWS-IF97.h  IsothermalSinglePhase.hxx  IsothermalTwoFluid.hxx  LinearElasticityModel.hxx  NavierStokes.hxx  ProblemCoreFlows.hxx  ProblemFluid.hxx  ProblemSaddlePoint.hxx  SinglePhase.hxx  SinglePhaseStaggered.hxx  StationaryDiffusionEquation.hxx  TransportEquation.hxx  WaveStaggered.hxx  utilitaire_algebre.h
CoreFlows/Models/src/: CMakeLists.txt  DiffusionEquation.cxx  DriftModel.cxx  EulerBarotropicStaggered.cxx  FiveEqsTwoFluid.cxx  Fluide.cxx  IsothermalSinglePhase.cxx  IsothermalTwoFluid.cxx  LinearElasticityModel.cxx  NavierStokes.cxx  ProblemCoreFlows.cxx  ProblemFluid.cxx  SinglePhase.cxx  SinglePhaseStaggered.cxx  StationaryDiffusionEquation.cxx  TransportEquation.cxx  WaveStaggered.cxx  fluid.h  (+1 more)
CoreFlows/examples/: CMakeLists.txt
CoreFlows/gui/: AUTHORS  CFDesktop.py  CMakeLists.txt  CoreFlows_Standalone.py  SOLVERLABGUI_version.h.in  __init__.py  rst_prolog.rst  solverlabGUI
CoreFlows/gui_old/: AUTHORS  SalomePyQt_MockUp.py.in  slutils.py.in
CoreFlows/swig/: CMakeLists.txt  CoreFlows.i  solverlab.i
solverlabGUI/: AllTestLauncher.sh  AllTestLauncherSolverlab.py  CMakeLists.txt  LICENSE  README_solverlab.md  README_tuleap_solverlabgui.md  SOLVERLABGUI_version.h.in  __init__.py  compile_solverlab.sh  solverlabGUI
solverlabGUI/PACKAGESPYGUI-main/: CMakeLists.txt  LICENSE  README.md  compile_PACKAGEPY_MATIX.py  configure_solverlabGUI.sh  git_history.tmp
solverlabGUI/doc/: CMakeLists_compilation.txt  README.md
solverlabGUI/jupyter/: Model.md  setenv_solverlabgui.py
solverlabGUI/resources/: CMakeLists.txt  SalomeApp.xml.in
solverlabGUI/solverlabpy/: LaunchDiffusionEq.py  abcdExpression.py  analysisSvl.py  caseSolverlab.py  coloringSvl.py  configSvl.py  controlSimulationSvl.py  controllerSvl.py  dateTime.py  diffusionEq.py  equationSvl.py  mainWindowSvl.py  modelSvl.py  runSolverlab.py  solverlabFilePatterns.py  solverlabGui.py  solverlabSettings.py  testPrerequisitesSvl.py  transportEq.py  treeViewSvl.py  utilsSvl.py
solverlabGUI/src/: CMakeLists.txt
(+2098 files in other folders)
